spacing fix

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -180,6 +180,7 @@ h1 {
   font-weight: bold;
   font-size: 150px !important;
   line-height: 80px !important;
+  margin: 0px;
 }
 
 .uncentered h1 {
